--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     padding-left: 40px;
+    padding-top: 10px;
 }
 .logo-image{
     height: 50px;
@@ -28,6 +29,11 @@
 }
 .theme-icon{
     font-size: 32px;
+    padding-right: 40px;
+}
+.login-icon{
+    height:30px;
+    width: 30px;
     padding-right: 40px;
 }
 .dark{
