--- a/src/pages/Rules/rules.css
+++ b/src/pages/Rules/rules.css
@@ -1,6 +1,7 @@
 .rules-page{
-    margin: 5rem 18rem; 
+    margin: 4rem 18rem; 
     border-radius: 5px;
+    text-align: center;
 }
 .border{
     border:2px solid white
@@ -15,6 +16,8 @@
 .rules{
     font-size: 24px;
     margin: 20px;
+    margin-left: 50px;
+    text-align: left;
 }
 .rules li{
     padding: 10px;
@@ -24,7 +27,6 @@
     border-radius: 10px;
     font-size: 16px;
     border: none;
-    margin-left: 48rem;
-    margin-bottom: 20px;
     font-weight: 600;
+    margin: 10px;
 }
