--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
-.App {
-  text-align: center;
+
+* {
+  margin: 0;
+  padding: 0;
+  /* box-sizing: border-box; */
+  scrollbar-width: thin; /* Firefox */
+}
+*::-webkit-scrollbar {
+  width: 8px;
+  background-color: grey;
+}
+a {
+  text-decoration: inherit;
+  color: inherit;
 }
