--- a/src/pages/Rules/rules.css
+++ b/src/pages/Rules/rules.css
@@ -1,5 +1,5 @@
 .rules-page{
-    margin: 4rem 18rem; 
+    margin: 4rem 14rem; 
     border-radius: 5px;
     text-align: center;
 }
@@ -29,4 +29,15 @@
     border: none;
     font-weight: 600;
     margin: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+    .rules-page{
+        margin: 4rem 2rem;
+    }
+}
+@media only screen and (max-width: 1050px) {
+    .rules-page{
+        margin: 4rem 5rem;
+    }
 }
