--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -5,6 +5,7 @@
     position:absolute;
     bottom:20px;
     text-align: center;
+    margin: auto;
 }
 .white-footer-border{
     border-top: 3px solid white;
@@ -14,4 +15,9 @@
 }
 .footer-text{
     padding-top: 20px;
+}
+@media only screen and (max-width: 700px) {
+    .footer-container{
+        display: none;
+    }
 }
