--- a/src/pages/Results/result.css
+++ b/src/pages/Results/result.css
@@ -3,8 +3,11 @@
     flex-direction: column;
     text-align: center;
     padding-top: 7rem;
-    background-color: 162f4b;
+    background-color: #162f4b;
     height:100%;
     width:100%
   }
-  
+  .singleResult{
+    border:none;
+    margin-left: 0px;
+  }
