--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -5,6 +5,7 @@
     position: fixed;
     display: flex;
     justify-content: space-between;
+    z-index: 99;
 }
 .white-border{
     border-bottom: 3px solid white;
@@ -29,7 +30,7 @@
 }
 .theme-icon{
     font-size: 32px;
-    padding-right: 40px;
+    padding-right: 20px;
 }
 .login-icon{
     height:30px;
