--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -7,4 +7,16 @@
     margin: 2rem 35rem; 
     border-radius: 5px;
     text-align: center;
+    
+}
+@media only screen and (max-width: 768px) {
+    .profile-page{
+        margin: 4rem 2rem;     
+    }
+
+}
+@media only screen and (max-width: 1050px) {
+    .profile-page{
+        margin: 4rem 2rem;
+    }
 }
